changing sizing since not showing up correctly on everyones machines

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ h2, h3 {
 }
 .box {
 	float:left;
-	width:15%;
+	width:14%;
 	padding:0 35px;
 }
 .maincontent {
